<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5a623"
    android:orientation="vertical"
    tools:context=".soal.Guidance">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/adam"
        android:text="@string/guidance"
        android:textSize="24sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/adam"
        android:text="@string/babak_penyisihan"
        android:textSize="23sp"
        android:textColor="@android:color/black"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                style="@style/Nomor"
                android:text="@string/no1"/>
            <TextView
                style="@style/Value"
                android:text="@string/guide1"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                style="@style/Nomor"
                android:text="@string/no2"/>
            <TextView
                style="@style/Value"
                android:text="@string/guide2"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                style="@style/Nomor"
                android:text="@string/no21"/>
            <TextView
                style="@style/Value"
                android:text="@string/guide3"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                style="@style/Nomor"
                android:text="@string/no22"/>
            <TextView
                style="@style/Value"
                android:text="@string/guide4"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                style="@style/Nomor"
                android:text="@string/no3"/>
            <TextView
                style="@style/Value"
                android:text="@string/guide5"/>
        </TableRow>
    </TableLayout>


    <Button
        android:id="@+id/btnLanjut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/next"
        android:layout_gravity="center"/>

</androidx.appcompat.widget.LinearLayoutCompat>