<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/bg_login"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:src="@drawable/metrik2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <EditText
            android:id="@+id/userID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/edit_text_design"
            android:hint="@string/username"
            android:textSize="13sp"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="18dp" />
        <EditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/edit_text_design"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="13sp"
            android:maxLines="1"
            android:padding="18dp"/>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/allbutton"
            android:fontFamily="@font/mont"
            android:textColor="#fff"
            android:text="@string/login"/>
    </LinearLayout>
</FrameLayout>